--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
-    "sass": "^1.80.6"
+    "sass": "^1.80.6",
+    "sonner": "^1.7.0"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
