--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "axios": "^1.7.7",
     "cookies-next": "^4.3.0",
     "js-cookie": "^3.0.5",
+    "lucide-react": "^0.460.0",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-quill": "^2.0.0",
     "sass": "^1.80.6",
     "sonner": "^1.7.0"
   },
