--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-icons": "^5.3.0",
     "react-quill": "^2.0.0",
     "sass": "^1.80.6",
+    "sharp": "^0.33.5",
     "sonner": "^1.7.0"
   },
   "devDependencies": {
@@ -27,7 +28,6 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^8",
     "eslint-config-next": "14.2.13",
     "typescript": "^5"
   }
